--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -50,7 +50,7 @@ W takim razie
 
 \section{Podsumowanie}
 
-Po pierwsze, metoda zaproponowana w treści zadania jest nieoptymalna. Zbiega do $\pi$ w sposób nad liniowy, podczas gdy pozostałe metody, z pominięciem algorytmu Monte Carlo, zbiegają co najmniej liniowo. Metoda Gaussa-Legendre'a zbiega najszybciej, jednak to metoda Chudnowskych stanowi najlepszy kompromis między szybkością osiągania kolejnych liczb znaczących a zużywaną pamięcią. Co jednak najważniejsze, ludolfina została określona ze złożonością obliczeniową $O(1)$: 
+Po pierwsze, metoda zaproponowana w treści zadania jest nieoptymalna. Zbiega do $\pi$ w sposób nad liniowy, podczas gdy pozostałe metody, z pominięciem algorytmu Monte Carlo, zbiegają co najmniej liniowo. Metoda Gaussa-Legendre'a zbiega najszybciej. Co jednak najważniejsze, ludolfina została określona ze złożonością obliczeniową $O(1)$: 
 
 \begin{center}
     \emph{Następnie sporządził odlew "morza" o średnicy dziesięciu łokci, okrągłego, o wysokości pięciu łokci i o obwodzie trzydziestu łokci} \cite{biblia}. 
