--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -27,15 +27,17 @@ Dla każdej metody eksperymentalnie szacowaliśmy rząd zbieżności i przedstaw
 
 Jako wykładnik zbieżności metody uznajemy $p$ spełniające następujący wzór \cite{bog}
 
-\[\lim_{n \to \infty} \frac{|a_n - \alpha|}{|a_{n-1} - \alpha|^p} = c  \]
-
-Gdzie $a_n$ to wynik danej metody dla i-tej iteracji, $\alpha$ to wartość do której zbiega metoda czyli $\pi$, w tej pracy przyjmiemy że to wartość biblioteczna. Zaś $c$ to stała. Zachodzi następująca
-\[ \lim_{n \to \infty} \frac{|a_n - \pi|}{|a_{n-1} - \pi|^p} = c = \lim_{n \to \infty} \frac{|a_{n-1} - \pi|}{|a_{n-2} - \pi|^p} \]
+\[\lim_{n \to \infty} \frac{|a_n - \alpha|}{|a_{n-1} - \alpha|^p} = c,  \]
+gdzie $a_n$ to wynik danej metody dla i-tej iteracji, $\alpha$ to wartość do której zbiega metoda czyli $\pi$, w tej pracy przyjmiemy że to wartość biblioteczna, zaś $c$ to stała. Zachodzi następująca relacja:
+\[ \lim_{n \to \infty} \frac{|a_n - \pi|}{|a_{n-1} - \pi|^p} = c = \lim_{n \to \infty} \frac{|a_{n-1} - \pi|}{|a_{n-2} - \pi|^p}. \]
 W takim razie 
-\[ \frac{|a_n - \pi|}{|a_{n-1} - \pi|^p} \approx \frac{|a_{n-1} - \pi|}{|a_{n-2} - \pi|^p} \]
 
-\[ (\frac{|a_{n-2} - \pi|}{|a_{n-1} - \pi|})^p \approx \frac{|a_{n-1} - \pi|}{|a_{n} - \pi|} \]
-\[ p \approx \frac{\log(|\frac{a_{n-2} - \pi}{a_{n-1} - \pi}|)}{\log(|\frac{a_{n-1} - \pi}{a_{n} - \pi}|)}
+\begin{align*}
+    \frac{|a_n - \pi|}{|a_{n-1} - \pi|^p} &\approx \frac{|a_{n-1} - \pi|}{|a_{n-2} - \pi|^p}\\
+    \frac{|a_{n-2} - \pi|^p}{|a_{n-1} - \pi|^p} &\approx \frac{|a_{n-1} - \pi|}{|a_{n} - \pi|}
+\end{align*}
+co po nałożeniu logarytmu na obie strony daje oszacowanie na $p$ postaci:
+\[ p \approx \frac{\log(|\frac{a_{n-2} - \pi}{a_{n-1} - \pi}|)}{\log(|\frac{a_{n-1} - \pi}{a_{n} - \pi}|)}.
 \]
 
 \input{pierwsze-proby.tex}
