--- a/prac_2/doc/sprawozdanie.tex
+++ b/prac_2/doc/sprawozdanie.tex
@@ -9,8 +9,12 @@
 \maketitle
 \tableofcontents
 
-\section{Wstęp}
+\input{wstep.tex}
 
-https://people.inf.ethz.ch/gander/papers/qrneu.pdf
+\input{zaplecze_matematyczne.tex}
+
+\input{gauss_alg.tex}
+
+\input{qr_alg.tex}
 
 \end{document}
