--- a/prac_2/doc/sprawozdanie.tex
+++ b/prac_2/doc/sprawozdanie.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt, wide, leqno]{mwart}
 
 \usepackage{../../template}
+\usepackage{worldflags}
 %\usepackage{showframe}
 
 \tit{P.2.3.}
