jupyter hesus upada po raz 2137ty

--- a/prac_2/prog/program.ipynb
+++ b/prac_2/prog/program.ipynb
@@ -326,6 +326,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Poniżej są rozpisane komendy generujące dane do raportu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gen_data (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function gen_data(size, precision)\n",
+    "    setprecision(precision)\n",
+    "    A,b,x = gen_test(size,rand(BigFloat,size))\n",
+    "    print(calc_house_err1(A))\n",
+    "    print(calc_house_err2(A))\n",
+    "    print(calc_house_err3(A))\n",
+    "    print(calc_house_err4(A))\n",
+    "    hx = householder.calc_householder(A,b)\n",
+    "    print(calc_error(A, b, hx))\n",
+    "    gx = gauss.calc_gauss(A,b)\n",
+    "    print(calc_error(A, b, hx))\n",
+    "end\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
