--- a/prac_2/doc/sprawozdanie.tex
+++ b/prac_2/doc/sprawozdanie.tex
@@ -2,6 +2,8 @@
 
 \usepackage{../../template}
 \usepackage{worldflags}
+
+\renewcommand{\arraystretch}{1.5}
 %\usepackage{showframe}
 
 \tit{P.2.3.}
