--- a/prac_2/doc/wstep.tex
+++ b/prac_2/doc/wstep.tex
@@ -18,4 +18,4 @@ $$Q^TA-R$$
 $$Q^TQ-I$$
 poprzez wyznaczenie normy wektora $Bx$, gdzie $B$ to jedna z powyższych macierzy, z $x$ jest wektorem składającym się wyłącznie z $1$. Macierze będące wynikami powyższych przekształceń powinny być macierzami zerowymi, co wynika z przekształcenia $A=QR$ oraz ortogonalności macierzy $Q$ (wtedy $Q^{-1}=Q^T$).
 
-Dodatkowo, sprawdzona zostanie złożoność obliczeniowa każdego z algorytmów.
+Wszystkie obliczenia zostaną wykonane na \verb+BigFloatach+ w trzech precyzjach: $68$, $419$ oraz $2136$
