--- a/prac_2/doc/qr_alg.tex
+++ b/prac_2/doc/qr_alg.tex
@@ -151,7 +151,7 @@ Co ciekawe, liczba cyfr znaczących różnicy między otrzymanym przez nas rozwi
 \subsection{Złożoność obliczeniowa}
 
 
-W naszej implementacji najpierw wykonujemy n iteracji zewnętrznej pętli. Wewnątrz której mamy pętle po kolumnach oraz wierszach.
+W naszej implementacji najpierw wykonujemy n iteracji zewnętrznej pętli. Wewnątrz której mamy pętle po kolumnach oraz pętle po wierszach.
 
 W każdym kroku obu tych pętli wykonujemy stałą liczbę następujących operacji: mnożenie wektora przez skalar, dodawania/odejmowanie wektorów, mnożenie wektora przez wektor o takim rozmiarze ale, który został transponowany.
 Wszystkie te operacje mają złożoność $O(n)$. I jako że jest ich stała liczba, to każda iteracja tych pętli ma złożoność $O(n)$
