nie-wiem-co-zrobilam

--- a/prac_2/doc/podsumowanie.tex
+++ b/prac_2/doc/podsumowanie.tex
@@ -5,3 +5,5 @@ W porównaniu ~Tabeli~\ref{gauss:error} oraz ~Tabeli~\ref{house:error} widzimy n
 Złożoność obu algorytmów była taka sama - oba wykonują $O(n^3)$ operacji, jednak przy metodzie Householdera potrzebujemy większej liczby zmiennych. Z drugiej strony, metoda Householdera zwraca więcej informacji o macierzy $A$ niz metoda eliminacji Gaussa.
 
 Jeżeli potrzebujemy bardzo wysokiej precyzji obliczeń lepszym wyborem jest metoda Householdera. Jednak jeśli liczy się prostota implementacji oraz zmniejszenie ilości używanej przez algorytm pamięci, to metoda eliminacji Gaussa jest bardzo dobrym rozwiązaniem.
+
+\koniec
