--- a/prac_2/doc/wstep.tex
+++ b/prac_2/doc/wstep.tex
@@ -1,10 +1,8 @@
 \section{Wstęp}
 
-Fajne podpierdalanko:
+Od szkoły podstawowej przez gimnazjum (lub szkołę podstawową 2.0), liceum, przez studia i okazjonalnie po studiach wymagane od uczestników systemu szkolnictwa w Polsce wymagana jest umiejętność rozwiązywania równań. Zaczynamy od prostych, przyjemnych problemów - znajdź $x$. Można go wskazać paluszkiem, a można znaleźć jego wartość. Każdy jest w stanie to zrobić. Potem do $x$ dochodzi $y$ i powstaje chłopiec lub też układ równań. Znalezienie obu jest to zadanie trudniejsze, a czasem wręcz niemożliwe. Potem idziemy na studia i spotykamy $x_k$ i to jest moment w którym z grzecznego, ułożonego chłopca układ równań staje się hydrą o $n$ głowach, która kąsa i gryzie studenta który bez pomocy maszyny nie umie nawet pomnożyć $7\cdot13$. W takich momentach potrzebna jest interwencja boska lub maszynowa. Chciałoby się zakrzyknąć "Google, solve this set of equations for me!". Ale Google nie słucha lub nie umie. Wolfram milczy wymownie w kącie, oceniając wybory życiowe studenta. Wtedy właśnie student musi wziąć życie w swoje ręce, siąść przed komputerem, otworzyć nano i zacząć tworzyć kod, który rozwiąże tę $n$-głową hydrę i pokaże, że $x$ jest zerem.
 
-\href{https://people.inf.ethz.ch/gander/papers/qrneu.pdf}{algorytmy}
-
-\href{https://inst.eecs.berkeley.edu/~ee127/sp21/livebook/l_lineqs_solving.html}{jak użyć do rozwiązywania równań}
+W poniższej pracy zbierzemy nasze studenckie siły i postaramy się pokonać hydrę, trafiając jak najbliżej każdej z jej $n$ głów.
 
 \subsection{Metodologia}
 
